README review